# Smart-Patrol-Robot

./: README.md
script/control/: control.sh  server.sh
script/explore/: explore.sh  main.sh
script/fusion/: main.sh  map_merge.sh  merge.sh
script/lwbot/: camera.sh  main.sh  navigation.sh  slam.sh  yolo.sh
script/patrol/: autopatrol.sh  main.sh  navigation.sh
script/simulation/: main.sh
src/algorithm/astar_planner/: CMakeLists.txt  astar_planner_plugin.xml  package.xml
src/algorithm/astar_planner/include/: a_star.h  astar_planner.hpp  global_planner.h
src/algorithm/astar_planner/src/: a_star.cpp  astar_planner.cpp  global_planner.cpp
src/algorithm/bspline_smoother/: CMakeLists.txt  bspline_smoother.xml  package.xml
src/algorithm/bspline_smoother/include/bspline_smoother/: bspline_curve.h  bspline_smoother.hpp  curve.h  math_helper.h
src/algorithm/bspline_smoother/src/: bspline_curve.cpp  bspline_smoother.cpp  curve.cpp  math_helper.cpp
src/algorithm/esdf_plugin/: CMakeLists.txt  distance_layer_costmap_plugin.xml  package.xml
src/algorithm/esdf_plugin/include/: distance_layer.h  esdf.h
src/algorithm/esdf_plugin/src/: distance_layer.cpp  esdf.cpp
src/algorithm/pid_controller/include/: local_planner.h  math_helper.h  nodes.h  pid_controller.h
src/algorithm/pid_controller/src/: local_planner.cpp  math_helper.cpp  pid_controller.cpp
src/algorithm/simulation/: CMakeLists.txt  package.xml
src/algorithm/simulation/config/: navigation.yaml
src/algorithm/simulation/launch/: localization_launch.py  navigation_launch.py  simulation.launch.py  slam_launch.py
src/algorithm/simulation/rviz/: simulation.rviz
src/algorithm/utils/: CMakeLists.txt  package.xml
src/algorithm/utils/include/: math_helper.h
src/algorithm/utils/src/: math_helper.cpp  nodes.cpp
src/control/: index.html  redame.txt
src/explore/config/: params_costmap.yaml
src/fusion/map_merge/src/: map_merge.cpp
src/lwbot/lwbot_bringup/: CMakeLists.txt  package.xml
src/lwbot/lwbot_bringup/launch/: bringup.launch.py  urdf2tf.launch.py
src/lwbot/lwbot_bringup/map/: room.pgm  room.yaml
src/lwbot/lwbot_camera/: package.xml  setup.cfg  setup.py
src/lwbot/lwbot_camera/config/: lwbot_camera.yaml
src/lwbot/lwbot_camera/lwbot_camera/: camera_driver.py
src/lwbot/lwbot_description/: CMakeLists.txt  package.xml
src/lwbot/lwbot_description/urdf/: lwbot.urdf
src/lwbot/lwbot_navigation2/: CMakeLists.txt  package.xml
src/lwbot/lwbot_navigation2/launch/: navigation2.launch.py
src/lwbot/ros_serial2wifi/: package.xml  setup.py
src/lwbot/yolov5/: package.xml  setup.py
